# pipx-poetry-template

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
