[tool.poetry]
name = "pipx-poetry-test"
version = "0.1.0"
description = ""
authors = ["kkaarroollm <mkarol.4514@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
